glFusion ChangeLog

v1.1.4
------
- Group editor did not properly save additional groups or features (Mark)
- Set height of logview window to facilitate easier horizontal scrolling (Eric)
- Moved css and js cache files to layout_cache/ directory (Mark)
- Added $_SYSTEM['skip_ip_check'] to disable the long term cookie IP check
  (Mark)
- Handle disabled set_time_limit() function better in plugin upload routines
  (Mark)
- Fine tuned SQL calls to help prevent injection / other issues (Mark)
- Force IE8 to use IE7 compatibility mode to resolve text entry issues with
  the forum plugin (Mark)
- Properly filter the topics array prior to using in SQL in usersettings.php
  (Mark)
- Add CRLF between each JavaScript file (Mark)
- Additional security tweaks (Mark)
- 0000422 Use of adveditor in block editor does not permit use of image insert
  or file upload connector (Mark)
- Implemented 'passwd' configuration type, this allows passwords in the
  configuration screen to be properly masked (Mark)
- Story submission does not clear the Site Tailor menu cache which results
  in the topic story count being wrong (Mark) (story.class.php)
- Installation did not properly detect missing siteconfig.php.dist file (Mark)
- Advanced search using date range did not return stories or comments in
  that date range (Mark)

Forum
-----
- Set width for text formatted code blocks in forum when using a fixed width
  layout (Eric)
- Fixed issue where duplicate forum names (different categories) did not show
  in the forum selection list for moderation functions. (Mark)

Media Gallery
-------------
- New config setting: $_MG_CONF['use_large_stars'] - if set to 1, the larger
  stars will be used in the album view instead of the smaller stars. (Mark)
- Added option to phpblock_mg_randommedia to link to album instead of media.
  Modify the block function to phpblock_mg_randommedia(album) (Mark)
- Added option to statically sort an album by rating (Mark)