@@ -496,6 +496,13 @@ function INST_gotPathSetting($dbc_path = '')
 
     $_GLFUSION['currentstep'] = 'pathsetting';
 
+    // initialize the advanced paths to empty
+
+    $log_path    = '';
+    $lang_path   = '';
+    $backup_path = '';
+    $data_path   = '';
+
     // was it passed from the previous step, or via $_POST?
     if ( $dbc_path == '' ) {
         $dbconfig_path = INST_stripslashes($_POST['private_path']);
@@ -516,43 +523,39 @@ function INST_gotPathSetting($dbc_path = '')
     // store entered path into the session var
     $_GLFUSION['dbconfig_path'] = $dbconfig_path;
 
+    // check and see if the advanced path settings were entered...
+
     if ( isset($_POST['logpath']) && $_POST['logpath'] != '') {
         $log_path = INST_stripslashes($_POST['logpath']);
         if (!preg_match('/^.*\/$/', $log_path)) {
             $log_path .= '/';
         }
-    } else {
-        $log_path = $dbconfig_path .'logs/';
+        $_GLFUSION['log_path']      = $log_path;
     }
+
     if ( isset($_POST['langpath']) && $_POST['langpath'] != '') {
         $lang_path = INST_stripslashes($_POST['langpath']);
         if (!preg_match('/^.*\/$/', $lang_path)) {
             $lang_path .= '/';
         }
-    } else {
-        $lang_path = $dbconfig_path .'language/';
+        $_GLFUSION['lang_path']     = $lang_path;
     }
+
     if ( isset($_POST['backuppath']) && $_POST['backuppath'] != '') {
         $backup_path = INST_stripslashes($_POST['backuppath']);
         if (!preg_match('/^.*\/$/', $backup_path)) {
             $backup_path .= '/';
         }
-    } else {
-        $backup_path = $dbconfig_path .'backups/';
+        $_GLFUSION['backup_path']   = $backup_path;
     }
+
     if ( isset($_POST['datapath']) && $_POST['datapath'] != '') {
         $data_path = INST_stripslashes($_POST['datapath']);
         if (!preg_match('/^.*\/$/', $data_path)) {
             $data_path .= '/';
         }
-    } else {
-        $data_path = $dbconfig_path .'data/';
+        $_GLFUSION['data_path']     = $data_path;
     }
-
-    $_GLFUSION['log_path']      = $log_path;
-    $_GLFUSION['lang_path']     = $lang_path;
-    $_GLFUSION['backup_path']   = $backup_path;
-    $_GLFUSION['data_path']     = $data_path;
 
     // now, lets see if it exists, if not, try to rename the .dist file...
 
@@ -577,6 +580,28 @@ function INST_gotPathSetting($dbc_path = '')
     if ( !INST_isWritable($dbconfig_path.'db-config.php') ) {
         return _displayError(DBCONFIG_NOT_WRITABLE,'pathsetting');
     }
+
+    /* now set the other paths */
+
+    if ( $log_path == '' ) {
+        $log_path = $dbconfig_path .'logs/';
+    }
+
+    if ( $lang_path == '') {
+        $lang_path = $dbconfig_path .'language/';
+    }
+
+    if ( $backup_path == '' ) {
+        $backup_path = $dbconfig_path .'backups/';
+    }
+    if ( $data_path == '' ) {
+        $data_path = $dbconfig_path .'data/';
+    }
+
+    $_GLFUSION['log_path']      = $log_path;
+    $_GLFUSION['lang_path']     = $lang_path;
+    $_GLFUSION['backup_path']   = $backup_path;
+    $_GLFUSION['data_path']     = $data_path;
 
     // we have a good path to /private, off to the next step...
     return INST_checkEnvironment($dbconfig_path);
